2007-03-31  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcroptool.c: access the GimpCropOptions structure
	directly to read the "layer_only" option (don't use g_object_get),
	some code cleanup.

2007-03-31  Michael Natterer  <mitch@gimp.org>

	Statusbar messages shouldn't depend on the emission of unrelated
	signals:

	* app/widgets/gimpuimanager.c (gimp_ui_manager_connect_proxy):
	connect to the menu items' "select" and "deselect" signals here...

	(gimp_ui_manager_item_realize): ...instead of here.

2007-03-31  Michael Natterer  <mitch@gimp.org>

	* app/actions/dialogs-actions.c
	* app/actions/dock-actions.c
	* app/actions/edit-actions.c
	* app/actions/file-actions.c
	* app/actions/help-actions.c
	* app/actions/layers-actions.c
	* app/actions/plug-in-actions.c
	* app/actions/tools-actions.c
	* app/actions/vectors-actions.c
	* app/actions/view-actions.c
	* app/actions/window-actions.c: add many missing action tooltips
	and fixed some broken/inconsistent ones. Sorry for the big string
	change but the inconsistenties were just too big to ship 2.4 like
	that.

2007-03-30  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c: hardcode the result of
	log (1.0 / 255.0) and avoid a useless call to sqrt().

2007-03-30  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpheal.c (gimp_heal_laplace_iteration)
	(gimp_heal_laplace_loop): compare square of errors instead of
	calculating the square root. Rewritten loop to avoid code duplication.

2007-03-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.[ch]
	* app/tools/gimpperspectiveclonetool.c
	* app/tools/gimptransformtool.c: compare squared distances.

2007-03-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw_guides):
	hardcode the result of sqrt(5).

2007-03-29  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.c (gimp_tool_check_click_distance): don't
	compare the result of sqrt() with something, compare the original